# proof-of-concepts

plant-water-level/pcb/kicad/: plant_water_level.kicad_pcb  plant_water_level.pro
plant-water-level/pcb/kicad/panel/: plant_water_level-cache.lib  plant_water_level.kicad_pcb  plant_water_level.kicad_pcb-bak  plant_water_level.sch
plant-water-level/pcb/kicad/panel/gbr/: plant_water_level-B_Cu.gbr  plant_water_level-B_Mask.gbr  plant_water_level-B_Paste.gbr  plant_water_level-B_SilkS.gbr  plant_water_level-Edge_Cuts.gbr  plant_water_level-F_Cu.gbr  plant_water_level-F_Mask.gbr  plant_water_level-F_Paste.gbr  plant_water_level-F_SilkS.gbr  plant_water_level-NPTH.drl  plant_water_level-PTH.drl
step-motor-stm32/: interrupt.c  interrupt.h  main.c  time.c  time.h
usb_ctrl_6/: comm.c  comm.dep  comm.h  comm.pre  funclist  main.c  main.dep  main.h  main.pre  ptypes.h  uart.c  uart.dep  uart.h  uart.pre  usb_ctrl_6.mcp  usb_ctrl_6.mcw  utils.dep  utils.pre
usb_ctrl_6/tools&scripts/: rly_ctrl.py
vameter/: Makefile  checkout.bat  t32_load_image.cmm  vameter.dep
vameter/cube/: vameter.ioc
vameter/source/application/include/: adc.h  display.h  gpio.h  interrupt.h  main.h  pcd8544.h  state_machine.h  stm32f1xx_hal_conf.h  system_init.h  tim.h  uart.h
vameter/source/application/src/: adc.c  cli.c  cli_sys.c  display.c  gpio.c  interrupt.c  main.c  pcd8544.c  state_machine.c  system_init.c  tim.c  uart.c
various-sensors-msp430/pcb/alcotest/: alcotest.PcbDoc  alcotest.PrjPcb  alcotest.SchDoc
various-sensors-msp430/source/: dht11.c  dht11.h  ds18b20.c  ds18b20.h  interrupt.c  lcd2wire.c  lcd2wire.h  main.c  mq3.c  mq3.h  one_wire.c  one_wire.h  system.c  system.h  tlc59282.c  tlc59282.h
wifi-controller-stm32-old/: CMakeLists.txt  README.md  STM32F100VB_FLASH.ld  checkout.sh  configure-linux-release.sh  configure-linux.sh  configure-windows-release.bat  configure-windows.bat  stm32-gcc.cmake
wifi-controller-stm32-old/eagle/: wifi.brd  wifi.sch  wifi_bom.txt
wifi-controller-stm32-old/html/: index.html  login-sent.html
wifi-controller-stm32-old/scripts/: debug.gdb  load_image_to_flash.sh  st-util.bat  st-util.sh
wifi-controller-stm32-old/source/application/include/: bl_flash.h  bl_uart.h  bsp_time.h  bsp_wifi_controller.h  callbacks.h  cli.h  ds18b20.h  esp8266.h  lock.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.h  stm32f1xx_it.h  types.h  uart.h
wifi-controller-stm32-old/source/application/src/: bl_flash.c  bl_uart.c  bsp_time.c  bsp_wifi_controller.c  callbacks.c  cli.c  cli_esp8266.c  cli_sys.c  ds18b20.c  esp8266.c  lock.c  main.c  startup_stm32f100xb.s  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
wifi-controller-stm32-old/source/libs/CMSIS/: CMakeLists.txt
wifi-controller-stm32-old/source/libs/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
wifi-controller-stm32-old/source/libs/STM32F1xx_HAL_Driver/: CMakeLists.txt
wifi-controller-stm32-old/source/libs/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_def.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_spi.h  stm32f1xx_hal_uart.h
wifi-controller-stm32-old/source/libs/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c  stm32f1xx_hal_eth.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_sd.c  stm32f1xx_hal_uart.c  stm32f1xx_ll_usb.c
wifi-controller-stm32-old/source/libs/one_wire/: CMakeLists.txt
wifi-controller-stm32-old/source/libs/one_wire/include/: one_wire.h
wifi-controller-stm32-old/source/libs/one_wire/src/: one_wire.c
